unpackaged/main/default/objects/Converted_Order_Influence__c/Converted_Order_Influence__c.object-meta.xml
<CustomObject>
    <label>Converted Order Influence</label>
    <nameField>
        <displayFormat>COI--{000000000}</displayFormat>
        <label>Converted Order Influence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Converted Order Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>