unpackaged/main/default/objects/Converted_Order_Influence__c/fields/Influencer_Name__c.field-meta.xml
<CustomField>
    <fullName>Influencer_Name__c</fullName>
    <formula>IF( Order_Influence__r.Customer_Care_Rep_Full_Name__c != null, Order_Influence__r.Customer_Care_Rep_Full_Name__c,  Order_Influence__r.CreatedBy.FirstName &amp; ' ' &amp;  Order_Influence__r.CreatedBy.LastName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influencer Name</label>
    <type>Text</type>
</CustomField>