unpackaged/main/default/objects/Converted_Order_Influence__c/fields/Order_Influence__c.field-meta.xml
<CustomField>
    <fullName>Order_Influence__c</fullName>
    <label>Order Influence</label>
    <referenceTo>Order_Influence__c</referenceTo>
    <relationshipLabel>Influenced Orders</relationshipLabel>
    <relationshipName>Converted_Order_Influences</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>